apps/myspeed/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myspeed-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: myspeed.solveir.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myspeed-service
                port:
                  number: 5216
  tls:
    - hosts:
        - myspeed.solveir.icu
      secretName: myspeed-tls
